tests/expectations/parser/program/non_aleo_network_fail.out
Error [EPAR0370005]: expected a program id -- found 'test'
    --> test:2:9
     |
   2 | program test.eth {
     |         ^^^^
